css进阶基本完成

--- a/html/css3.html
+++ b/html/css3.html
@@ -375,5 +375,12 @@
 <hr>
 <span style="display: block; text-align: center;">Sass入门</span>
 <hr>
+<p>Sass：英文是 Syntactically Awesome Stylesheets Sass。最早由 Hampton Catlin 开发和设计。 一种帮助你简化 CSS 工作流程的方式，帮助你更容易维护和开发 CSS 内容。Sass 是这个世界上最成熟、稳定和强大的专业级 CSS 扩展语言。Sass专注的是怎样创建优雅的样式表，而不是内容。Less/Sass是语法、Compass是框架、CSS是目标。</p>
+<p class="p_sacc">通过引入sass来引入样式</p>
+<hr>
+<span style="display: block; text-align: center;">浏览器的兼容性问题</span>
+<hr>
+<p>我们在div里放一个img，发现：在html和html5中，div的长宽是不同的，后者的高度要超过几个像素。</p>
+
 </body>
 </html> 
