--- a/html/es6.html
+++ b/html/es6.html
@@ -592,6 +592,65 @@ queryData().then(data => {
 
 
 
+<hr>
+<span style="display: block; text-align: center;">ES6：Symbol</span>
+<hr>
+<p>背景：ES5中对象的属性名都是字符串，容易造成重名，污染环境。</p>
+<p>概念：ES6 引入了一种新的原始数据类型Symbol，表示独一无二的值。它是 JavaScript 语言的第七种数据类型，
+    前六种是：undefined、null、布尔值（Boolean）、字符串（String）、数值（Number）、对象（Object）。</p>
+    <ul>
+        <span>特点：</span>
+        <li>Symbol属性对应的值是唯一的，解决命名冲突问题</li>
+        <li>Symbol值不能与其他数据进行计算，包括同字符串拼串</li>
+        <li>for in、for of 遍历时不会遍历Symbol属性</li>
+    </ul>
+<span style="display: block; text-align: center;">下面来讲一下Symbol的使用。</span>
+<span style="display: block; text-align: center;">1、将Symbol作为对象的属性值</span>
+<textarea name="" id="" cols="60" rows="13">
+    let mySymbol = Symbol();
+    let obj = {
+        name: 'smyhvae',
+        age: 26
+    };
+
+    //obj.mySymbol = 'male'; //错误：不能用 . 这个符号给对象添加 Symbol 属性。
+    obj[mySymbol] = 'hello';    //正确：通过**属性选择器**给对象添加 Symbol 属性。后面的属性值随便写。
+
+    console.log(obj);
+</textarea>
+<span style="display: block; text-align: center;">创建Symbol属性值时，传参作为标识</span>
+<textarea name="" id="" cols="60" rows="20">
+    //如果我通过 Symbol()函数创建了两个值，这两个值是不一样的：
+    let mySymbol1 = Symbol();
+    let mySymbol2 = Symbol();
+    console.log(mySymbol1 == mySymbol2); //打印结果：false
+    console.log(mySymbol1);         //打印结果：Symbol()
+    console.log(mySymbol2);         //打印结果：Symbol()
+    //二者的打印输出，肉眼看到的却相同。那该怎么区分它们呢?
+    //在括号里加入参数，来标识不同的Symbol
+    let mySymbol1 = Symbol('one');
+    let mySymbol2 = Symbol('two');
+
+    console.log(mySymbol1 == mySymbol2); //打印结果：false
+    console.log(mySymbol1);         //打印结果：Symbol(one)
+    console.log(mySymbol2);         //打印结果：Symbol(two)。颜色为红色。
+    console.log(mySymbol2.toString());//打印结果：Symbol(two)。颜色为黑色。
+</textarea>
+<span style="display: block; text-align: center;">定义常量</span>
+<p> const MY_NAME = Symbol('my_name');</p>
+<span style="display: block; text-align: center;">内置的 Symbol 值</span>
+<p>
+    除了定义自己使用的 Symbol 值以外，ES6 还提供了 11 个内置的 Symbol 值，指向语言内部使用的方法。
+Symbol.iterator属性
+对象的Symbol.iterator属性，指向该对象的默认遍历器方法。
+</p>
+
+
+
+
+
+
+
 
 </body>
 </html>
